Fixed a bug where the launch button did not function due to an invisible div in WINGS

--- a/main/main.less
+++ b/main/main.less
@@ -20,6 +20,7 @@
     position: absolute;;
     top: 40px;
     right: 16px;
+    z-index: 10000;
     img {
         width: 50px;
         height: 50px;
